--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1>Info about cats</h1>
         <p>Cats are cute and fluffy!</p>
         <p>As well as being cute, they are also very independent animals.</p>
-        <p>for more info, click the cat pic.</p>
+        <p>for more info, click the pic.</p>
         <ul>
             <a href="https://henrik8772.github.io/CatHub/">
                 <img src="catfrontpic.jpg" alt="catss">
