--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
         }
 
         .flex {
-            display: flex;
-            gap: 1em;
+            display: inline-block;
+            margin: 20px auto;
+            max-width: 300px;
+            border-radius: 10px;
+            align-items: center;
         }
     </style>
 </head>
